# SuperMat

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-build.yml  ci-release.yml
data/annotated/batch-1/: 1609.04957-CC.superconductors.features.txt  1609.04957-CC.superconductors.tei.xml  1609.04957-CC.txt  1609.04957.superconductors.features.txt  1903.04321-CC.superconductors.features.txt  1903.04321-CC.superconductors.tei.xml  1903.04321-CC.txt  APL0774202-CC.txt  (+115 more)
data/csv/: SuperMat-1.0.csv  SuperMat-2.0.csv
docs/: CHANGELOG.md  README.md  annotation-tool.rst  conf.py  data-model.rst  guidelines-material-parser.rst  guidelines.rst  index.rst  introduction.rst  references.rst  workflow.rst
docs/resources/: classes-superconductors-hierarchy.pptx  superconductor-documentation.key
scripts/: tsv2xml.py  xml2LossyJSON.py  xml2csv.py  xml2csv_entities.py  xml2tsv.py  xmlSupermat2csv.py
scripts/jupyter/: dataset-analysis-labelling.ipynb  dataset-analysis-linking.ipynb  dataset-analysis-papers.ipynb
src/supermat/: grobid_tokenizer.py  supermat_tei_parser.py  utils.py
super_mat/: dataset-analysis-labelling.ipynb  dataset-analysis-linking.ipynb  dataset-analysis-papers.ipynb
super_mat/converters/: tsv2xml.py  xml2tsv.py  xmlSupermat2csv.py
supermat/: grobid_tokenizer.py
supermat/converters/: tsv2xml.py  xmlSupermat2csv.py
tests/: conftest.py  test_supermat_tei_parser.py
tests/test_data/: kotesample.xml  test_body1.xml  test_paragraphs.xml  test_sentences.xml
(+1102 files in other folders)
